--- a/film-saver/build.gradle
+++ b/film-saver/build.gradle
@@ -29,6 +29,12 @@ repositories {
     jcenter()
 }
 
+dependencyManagement {
+    imports {
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Finchley.SR1'
+    }
+}
+
 docker {
     springBootApplication {
         baseImage = 'openjdk:10-jdk-slim'
@@ -53,4 +59,7 @@ dependencies {
     compile 'com.fasterxml.jackson.module:jackson-module-parameter-names'
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    
+    compile 'org.springframework.cloud:spring-cloud-starter-config:2.0.1.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-starter-eureka:1.0.0.RELEASE'
 }
