--- a/config/build.gradle
+++ b/config/build.gradle
@@ -1,42 +1,55 @@
 buildscript {
-	ext {
-		springBootVersion = '2.0.5.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '2.0.5.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath 'com.bmuschko:gradle-docker-plugin:3.6.1'
+    }
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.bmuschko.docker-spring-boot-application'
 
 group = 'igor'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 10
 
 repositories {
-	mavenCentral()
+    mavenCentral()
+    jcenter()
 }
 
 
 ext {
-	springCloudVersion = 'Finchley.SR1'
+    springCloudVersion = 'Finchley.SR1'
+}
+
+docker {
+    springBootApplication {
+        baseImage = 'openjdk:10-jdk-slim'
+        tag = 'config:latest'
+    }
 }
 
 dependencies {
     compile 'org.springframework.cloud:spring-cloud-starter-eureka:1.0.0.RELEASE'
     compile('org.springframework.cloud:spring-cloud-config-server')
-    
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
