--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -47,32 +47,95 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
+  config:
+    image: config:latest
+    ports:
+      - "8888:8888"
+    environment:
+      DISCOVERY_HOST: discovery
+
+  discovery:
+    image: discovery:latest
+    links:
+      - config
+    ports:
+      - "8082:8082"
+    environment:
+      CONFIG_URL: config
+    depends_on:
+      - config
+
+  gateway:
+    image: gateway:latest
+    ports:
+      - "8080:8080"
+    links:
+      - discovery
+    environment:
+      DISCOVERY_URL: discovery
+      CONFIG_URL: config
+    depends_on:
+      - discovery
+
   film-saver:
     image: film-saver:latest
     links:
+      - discovery
       - kafka
       - db
     ports:
-      - "8080:8080"
+      - "8083:8083"
     environment:
       DATABASE_URL: db
       KAFKA_URL: kafka
+      DISCOVERY_URL: discovery
+      CONFIG_URL: config
     depends_on:
       - kafka
       - zookeeper
       - db
+      - config
+      - discovery
+      - gateway
 
   film-search:
     image: film-search:latest
     links:
       - kafka
       - es
+      - discovery
     ports:
-      - "8090:8080"
+      - "8084:8084"
     environment:
       ELASTIC_URL: es
       KAFKA_URL: kafka
+      DISCOVERY_URL: discovery
+      CONFIG_URL: config
     depends_on:
       - kafka
       - zookeeper
       - es
+      - config
+      - discovery
+      - gateway
+
+  film-search2:
+    image: film-search:latest
+    links:
+      - kafka
+      - es
+      - discovery
+    ports:
+      - "8085:8084"
+    environment:
+      ELASTIC_URL: es
+      KAFKA_URL: kafka
+      DISCOVERY_URL: discovery
+      CONFIG_URL: config
+    depends_on:
+      - kafka
+      - zookeeper
+      - es
+      - config
+      - discovery
+      - gateway
