--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -29,37 +29,27 @@ repositories {
     jcenter()
 }
 
+ext {
+    springCloudVersion = 'Finchley.SR1'
+}
+
 dependencyManagement {
     imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Finchley.SR1'
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
 
 docker {
     springBootApplication {
         baseImage = 'openjdk:10-jdk-slim'
-        tag = 'film-saver:latest'
+        tag = 'gateway:latest'
     }
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-cache')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.boot:spring-boot-starter-webflux')
-    compile('org.apache.kafka:kafka-streams')
-    compile('org.flywaydb:flyway-core')
-    compile('org.springframework.kafka:spring-kafka')
-    runtime('org.postgresql:postgresql')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('io.projectreactor:reactor-test')
-
-    compileOnly 'org.projectlombok:lombok:1.18.2'
-    compile 'javax.xml.bind:jaxb-api:2.2.11'
-    compile 'javax.activation:activation:1.1.1'
-    compile 'com.fasterxml.jackson.module:jackson-module-parameter-names'
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-    
     compile('org.springframework.cloud:spring-cloud-starter-config')
     compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
+    compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+
