--- a/film-saver/src/main/resources/bootstrap.yml
+++ b/film-saver/src/main/resources/bootstrap.yml
@@ -12,3 +12,18 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${DISCOVERY_URL:localhost}:8082/eureka/
+
+management:
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    prometheus:
+      enabled: true
+    metrics:
+      enabled: true
